sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: '(' expected but identifier found.
    for i <- (0 to getNombreValeurs()-1){
        ^AlgBubbleSort1:11: error: illegal start of simple expression
  }
  ^