sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var estTrie = false
  while (!estTrie){
    for i <- (0 to getNombreValeurs()-1){
    	if (!plusPetit(i,i+1)){
        echange(i,i+1)
      }  
    }
    
  }
}